syntax = "proto3";

package blog;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service BlogService {
  rpc CreatePost(CreatePostRequest) returns (Post) {
    option (google.api.http) = {
      post: "/api/v1/posts",
      body: "post"
    };
  }

  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {
    option (google.api.http) = {
      get: "/api/v1/posts",
    };
  }

  rpc UpdatePost(UpdatePostRequest) returns (Post) {
    option (google.api.http) = {
      put: "/api/v1/posts/{post.id}",
      body: "post"
    };
  }
}

message Post {
  int32 id = 1;
  string title = 2;
  string body = 3;
  repeated string tags = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreatePostRequest {
  Post post = 1;
}

message ListPostsRequest {
}

message ListPostsResponse {
  repeated Post posts = 1;
}

message UpdatePostRequest {
  Post post = 1;
}
